--- a/www/418.html
+++ b/www/418.html
@@ -13,7 +13,7 @@
     <p>
         The server refuses to brew coffee because it is a teapot.
     </p>
-    <img href="/img/teapot.png"></img>
+    <img href="./img/teapot.png">
 </body>
 
 </html>
