--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
     <p>
         This is the landing page for Mitchell Larson's simple HTTP server.
     </p>
+    <img href="./img/football.jpg"/>
 </body>
 
 </html>
