--- a/www/418.html
+++ b/www/418.html
@@ -13,7 +13,7 @@
     <p>
         The server refuses to brew coffee because it is a teapot.
     </p>
-    <img href="./img/teapot.png">
+    <img src="/img/teapot.png" alt="Teapot" width="500" height="500">
 </body>
 
 </html>
