--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
             <li style="list-style-type:none"><i class="far fa-file"></i><span style="padding-left: 5px"><a href="/index.html">index.html</a></span></li>
         </ul>
     </ul>
+    <a href="/brew/coffee"><button>Brew Coffee</button></a>
 </body>
 
 </html>
